# Gesture_Controlled_Robot

./: .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/gesture_to_pose/: package.xml  setup.cfg  setup.py
src/gesture_to_pose/gesture_to_pose/: gesture_node.py
src/iisy_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/iisy_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  lbr_iisy3_r760.ros2_control.xacro  lbr_iisy3_r760.srdf  lbr_iisy3_r760.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
src/iisy_moveit_config/launch/: demo.launch.py  launcher.launch.py
src/iisy_moveit_config/src/: teleoperator_node.cpp
src/kuka_lbr_iisy_support/: CMakeLists.txt  package.xml
src/kuka_lbr_iisy_support/launch/: test_lbr_iisy3_r760.launch.py
src/kuka_lbr_iisy_support/urdf/: dual_lbr_iisy3_r760.urdf.xacro  gripper.urdf.xacro  lbr_iisy3_r760.urdf.xacro  lbr_iisy3_r760_macro.xacro  lbr_iisy_transmission.xacro
src/moveit2_teleoperation/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit2_teleoperation/config/: dual_lbr_iisy3_r760.ros2_control.xacro  dual_lbr_iisy3_r760.srdf  dual_lbr_iisy3_r760.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/moveit2_teleoperation/launch/: demo.launch.py  launch_teleoperation_sim.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/moveit2_teleoperation/src/: joint_angle_publisher.cpp  teleoperator_node.cpp
